--- a/module2-solution/index.html
+++ b/module2-solution/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Hello Coursera!</title>
+	<title>Module 2 Coding Assignment - solution</title>
 </head>
 <body>
-<h1>Hello Coursera! It's a great course!</h1>
+<h1>This is my solution for the Coding Assignment of Module 2.</h1>
 </body>
 </html>
