--- a/module2-solution/index.html
+++ b/module2-solution/index.html
@@ -5,5 +5,9 @@
 </head>
 <body>
 <h1>This is my solution for the Coding Assignment of Module 2.</h1>
+	<div> My first division...
+		<p>And this is my first paragraph!
+			</p>
+	</div>
 </body>
 </html>
