--- a/module2-solution/index.html
+++ b/module2-solution/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<title>Module 2 Coding Assignment - solution</title>
+	<link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
 <h1>This is my solution for the Coding Assignment of Module 2.</h1>
