--- a/module2-solution/index.html
+++ b/module2-solution/index.html
@@ -4,11 +4,37 @@
 	<title>Module 2 Coding Assignment - solution</title>
 	<link rel="stylesheet" href="css/styles.css">
 </head>
+
 <body>
-<h1>This is my solution for the Coding Assignment of Module 2.</h1>
-	<div> My first division...
-		<p>And this is my first paragraph!
-			</p>
-	</div>
+
+<h1>Our Menu</h1>
+
+<section>
+<section class="content">
+<h2 id="chicken">Chicken</h2>
+<p>
+	These are our chicken specialities, very good dishes. Chicken is a very nice animal and they also produce eggs. How great is that? Our own favourite is the Chicken kung-pao. You should try it!
+	</p>
+</section class="content">
+</section>
+
+<section>
+<section class="content">
+<h2 id="beef">Beef</h2>
+<p>
+	Our menu has some delicious beef classics like beef tar tar. You can't get such great food from anywhere else! Of course, cows themselves don't like the fact that we find the taste of their flesh so delicious, but that's not your problem. We invite you to enjoy. YUMMMYYYYYY!!1
+	</p>
+</section class="content">
+</section>
+
+<section>
+<section class="content">
+<h2 id="sushi">Sushi</h2>
+<p>
+	Our staff has some very talented sushi chefs from Japan. They are very familiar with these eastern delicacies. We have all kinds of fish and sea urchins and stuff. You name it, we have it. Fresh or smoked, it's up to you how we prepare the sushis. Konnichiwaaaaaa!
+	</p>
+</section class="content">
+</section>
+
 </body>
 </html>
