--- a/module2-solution/index.html
+++ b/module2-solution/index.html
@@ -22,7 +22,7 @@
 <section class="content">
 <h2 id="beef">Beef</h2>
 <p>
-	Our menu has some delicious beef classics like beef tar tar. You can't get such great food from anywhere else! Of course, cows themselves don't like the fact that we find the taste of their flesh so delicious, but that's not your problem. We invite you to enjoy. YUMMMYYYYYY!!1
+	Our menu has some delicious beef classics like beef tar tar. You can't get such great food from anywhere else! Of course, cows themselves don't like the fact that we find the taste of their flesh so delicious, but that's not your problem.
 	</p>
 </section class="content">
 </section>
