--- a/module3-solution/index.html
+++ b/module3-solution/index.html
@@ -1,12 +1,140 @@
 <!DOCTYPE html>
-<html>
-<head>
-	<title>Module 3 Coding Assignment - solution</title>
-	<link rel="stylesheet" href="css/styles.css">
-</head>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+    <title>Bootstrap 101 Template</title>
 
-<body>
-	<h1>Here it starts!</h1>
+    <!-- Bootstrap -->
+    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <!-- Additional styles -->
+    <link href="css/styles.css" rel="stylesheet">
+
+    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    <!--[if lt IE 9]>
+      <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
+      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <![endif]-->
+  </head>
+  <body>
+    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <!-- Include all compiled plugins (below), or include individual files as needed -->
+    <script src="js/bootstrap.min.js"></script>
+
+<!-- NAVBAR STARTS -->
+
+<nav class="navbar navbar-default">
+  <div class="container-fluid">
+    <!-- Brand and toggle get grouped for better mobile display -->
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand" href="#">Food, LLC</a>
+    </div>
+
+    <!-- Collect the nav links, forms, and other content for toggling -->
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+      <ul class="nav navbar-nav">
+        <li class="visible-xs text-center"><a href="#Sushi">Sushi</a></li>
+        <li class="visible-xs text-center"><a href="#Chicken">Chicken</a></li>
+        <li class="visible-xs text-center"><a href="#Beef">Beef</a></li>
+      </ul>
+    </div><!-- /.navbar-collapse -->
+  </div><!-- /.container-fluid -->
+</nav>
+
+<!-- NAVBAR ENDS -->
+
+<!-- PAGE HEADER -->
+
+    <h1 class="text-center" id="top">Our Menu</h1>
+
+<!-- ACTUAL CONTENT STARTS -->
+
+<div class="container-fluid">
+	<div class="row">
+  		
+  		<div class="col-md-4 col-sm-6 col-xs-12" id="Sushi">
+  			<div class="large-class">
+  				<h3 class="text-center">Sushi</h3>
+  				Lots of content here. Kitties and stuff. Very nice. Much interesting text. Nobody does it better than me.
+  				Lots of content here. Kitties and stuff. Very nice. Much interesting text. Nobody does it better than me.
+  				Lots of content here. Kitties and stuff. Very nice. Much interesting text. Nobody does it better than me.
+  				Lots of content here. Kitties and stuff. Very nice. Much interesting text. Nobody does it better than me.
+  				Lots of content here. Kitties and stuff. Very nice. Much interesting text. Nobody does it better than me.
+  				Lots of content here. Kitties and stuff. Very nice. Much interesting text. Nobody does it better than me.
+  				Lots of content here. Kitties and stuff. Very nice. Much interesting text. Nobody does it better than me.
+  				Lots of content here. Kitties and stuff. Very nice. Much interesting text. Nobody does it better than me.
+  				Lots of content here. Kitties and stuff. Very nice. Much interesting text. Nobody does it better than me.
+  				Lots of content here. Kitties and stuff. Very nice. Much interesting text. Nobody does it better than me.
+  				Lots of content here. Kitties and stuff. Very nice. Much interesting text. Nobody does it better than me.
+  				Lots of content here. Kitties and stuff. Very nice. Much interesting text. Nobody does it better than me.
+  				Lots of content here. Kitties and stuff. Very nice. Much interesting text. Nobody does it better than me.
+  				Lots of content here. Kitties and stuff. Very nice. Much interesting text. Nobody does it better than me.
+  				Lots of content here. Kitties and stuff. Very nice. Much interesting text. Nobody does it better than me.
+				<div class="bottom">
+					<a href="#top" class="bottom">Back&nbsp;to&nbsp;top</a>
+				</div>
+			</div>
+  		</div>
+  
+  		<div class="col-md-4 col-sm-6 col-xs-12" id="Chicken">
+			<div class="large-class">
+    			<h3 class="text-center">Chicken</h3>
+  				Lots of content here. Kitties and stuff. Very nice. Much interesting text. Nobody does it better than me.
+  				Lots of content here. Kitties and stuff. Very nice. Much interesting text. Nobody does it better than me.
+  				Lots of content here. Kitties and stuff. Very nice. Much interesting text. Nobody does it better than me.
+  				Lots of content here. Kitties and stuff. Very nice. Much interesting text. Nobody does it better than me.
+  				Lots of content here. Kitties and stuff. Very nice. Much interesting text. Nobody does it better than me.
+  				Lots of content here. Kitties and stuff. Very nice. Much interesting text. Nobody does it better than me.
+  				Lots of content here. Kitties and stuff. Very nice. Much interesting text. Nobody does it better than me.
+  				Lots of content here. Kitties and stuff. Very nice. Much interesting text. Nobody does it better than me.
+  				Lots of content here. Kitties and stuff. Very nice. Much interesting text. Nobody does it better than me.
+  				Lots of content here. Kitties and stuff. Very nice. Much interesting text. Nobody does it better than me.
+  				Lots of content here. Kitties and stuff. Very nice. Much interesting text. Nobody does it better than me.
+  				Lots of content here. Kitties and stuff. Very nice. Much interesting text. Nobody does it better than me.
+  				Lots of content here. Kitties and stuff. Very nice. Much interesting text. Nobody does it better than me.
+  				Lots of content here. Kitties and stuff. Very nice. Much interesting text. Nobody does it better than me.
+  				Lots of content here. Kitties and stuff. Very nice. Much interesting text. Nobody does it better than me.
+				<div class="bottom">
+					<a href="#top" class="bottom">Back&nbsp;to&nbsp;top</a>
+				</div>
+    		</div>
+    	</div>
+
+		<div class="col-md-4 col-sm-12 col-xs-12" id="Beef">
+			<div class="large-class">
+    			<h3 class="text-center">Beef</h3>
+  				Lots of content here. Kitties and stuff. Very nice. Much interesting text. Nobody does it better than me.
+  				Lots of content here. Kitties and stuff. Very nice. Much interesting text. Nobody does it better than me.
+  				Lots of content here. Kitties and stuff. Very nice. Much interesting text. Nobody does it better than me.
+  				Lots of content here. Kitties and stuff. Very nice. Much interesting text. Nobody does it better than me.
+  				Lots of content here. Kitties and stuff. Very nice. Much interesting text. Nobody does it better than me.
+  				Lots of content here. Kitties and stuff. Very nice. Much interesting text. Nobody does it better than me.
+  				Lots of content here. Kitties and stuff. Very nice. Much interesting text. Nobody does it better than me.
+  				Lots of content here. Kitties and stuff. Very nice. Much interesting text. Nobody does it better than me.
+  				Lots of content here. Kitties and stuff. Very nice. Much interesting text. Nobody does it better than me.
+  				Lots of content here. Kitties and stuff. Very nice. Much interesting text. Nobody does it better than me.
+  				Lots of content here. Kitties and stuff. Very nice. Much interesting text. Nobody does it better than me.
+  				Lots of content here. Kitties and stuff. Very nice. Much interesting text. Nobody does it better than me.
+  				Lots of content here. Kitties and stuff. Very nice. Much interesting text. Nobody does it better than me.
+  				Lots of content here. Kitties and stuff. Very nice. Much interesting text. Nobody does it better than me.
+  				Lots of content here. Kitties and stuff. Very nice. Much interesting text. Nobody does it better than me.
+    			<div class="bottom">
+					<a href="#top" class="bottom">Back&nbsp;to&nbsp;top</a>
+				</div>
+    		</div>
+    	</div>
+	</div>
+</div>
+
 </body>
-
 </html>
